# 15618_Project

./: README  writeup.txt  writeup1.txt
scenes/: happy.scene  teapot.scene  test.scene  verify.scene
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application.hpp  scene_loader.cpp
src/filter/: CMakeLists.txt  box.cpp  box.hpp  film.cpp  film.hpp  filter.cpp  filter.hpp  gaussian.cpp  gaussian.hpp  mitchell.cpp  mitchell.hpp  sinc.cpp  sinc.hpp
src/integrator/: CMakeLists.txt  direct.cpp  direct.hpp  path.cpp  path.hpp  surface.cpp  surface.hpp  whitted.cpp  whitted.hpp
src/light/: CMakeLists.txt  area.cpp  area.hpp  infinite.cpp  infinite.hpp  light.cpp  light.hpp  point.cpp  point.hpp
src/material/: CMakeLists.txt  bsdf_d.cpp  bsdf_d.hpp  btdf.cpp  btdf.hpp  bxdf.cpp  bxdf.hpp  material.cpp  material.hpp
src/math/: CMakeLists.txt  color.cpp  color.hpp  math.hpp  matrix.cpp  matrix.hpp  random462.cpp  random462.hpp  vector.hpp
src/p3/: CMakeLists.txt  main.cpp  raytracer.cpp  raytracer.hpp
src/sample/: CMakeLists.txt  halton.cpp  halton.hpp  random.cpp  random.hpp  sampler.cpp  sampler.hpp  stratified.cpp  stratified.hpp
src/scene/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  bvh.cpp  bvh.hpp  bvhISPC.cpp  bvhNonISPC.cpp  hit.ispc  hit_ispc.h  ispc_switch.h  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  partition.ispc  partition_ispc.h  ray.cpp  ray.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
